[package]
name = "blockgauge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
string-interner = "0.14.0"
ethereum_serde_utils = "0.5.1"
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3.28", default-features = false, features = ["alloc", "std"] }
