[package]
name = "blockgauge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
string-interner = "0.14.0"
ethereum_serde_utils = "0.8.0"
clap = { version = "4", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc", "std"] }
tower = "0.5.2"
